# Graph-Convolutional-Network-based-Autoencoder-Fault-DIagnosis

./: README.md  pyproject.toml
src/faultdiagdip94/: main.py
src/faultdiagdip94.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/faultdiagdip94/data/processed/: data_0.csv  data_1.csv  data_2.csv  data_3.csv  data_4.csv  data_5.csv  data_6.csv  data_7.csv
src/faultdiagdip94/models/: GCNVAE.py  GCNVAEH3.py  GCNVAEWS.py
src/faultdiagdip94/pipeline/: data_loader.py  data_processor.py  model_tester.py  model_trainer.py
src/faultdiagdip94/saved_model/: gcn_vae.pkl
src/faultdiagdip94/utils/: config.yaml  evaluator.py
