[project]
name = "faultdiagdip94"
version = "0.0.1"
authors = [
  { name="Murshedul Arifeen", email="marifeen1994@gmail.com" },
]
description = "Fault detection and diagnosis using Autoencoder for solar array data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "None"
Issues = "None"